<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/puzzleResult"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="367dp"
        android:text="@string/puzzleResult"
        app:layout_constraintBottom_toTopOf="@+id/sourceImgContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/puzzleContainer"
        app:layout_constraintVertical_bias="0.079" />

    <TableLayout
        android:id="@+id/puzzleContainer"
        android:layout_width="270dp"
        android:layout_height="360dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/puzzleResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleInfo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#039BE5">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="2dp"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingEnd="2dp"
                android:paddingRight="2dp" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#1E88E5"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E88E5">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#039BE5"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/img6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:clickable="true"
                android:focusable="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#039BE5">

            <ImageView
                android:id="@+id/img7"
                android:layout_width="90dp"
                android:layout_height="90dp" />

            <ImageView
                android:id="@+id/img8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#1E88E5"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/img9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:clickable="true"
                android:focusable="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgout"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#1E88E5"
                android:clickable="true"
                android:focusable="true"
                tools:src="@drawable/_null" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/CounterTime"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="367dp"
        android:text="@string/timecounter"
        app:layout_constraintBottom_toTopOf="@+id/sourceImgContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/puzzleContainer"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/startPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirmSelection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endPuzzle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleContainer"
        app:layout_constraintVertical_bias="0.182" />

    <Button
        android:id="@+id/endPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submitSelection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleContainer"
        app:layout_constraintVertical_bias="0.182" />

    <TableLayout
        android:id="@+id/sourceImgContainer"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/source1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img1" />

            <ImageView
                android:id="@+id/source2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img2" />

            <ImageView
                android:id="@+id/source3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img3" />

            <ImageView
                android:id="@+id/source4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/source5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img5" />

            <ImageView
                android:id="@+id/source6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img6" />

            <ImageView
                android:id="@+id/source7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img7" />

            <ImageView
                android:id="@+id/source8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/img8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/puzzleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puzzlegameinfomation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/giveUpGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giveup"
        app:layout_constraintBottom_toTopOf="@+id/sourceImgContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleContainer"
        app:layout_constraintVertical_bias="0.775" />

</androidx.constraintlayout.widget.ConstraintLayout>